unpackaged/main/default/objects/Fund_Investment__c/Fund_Investment__c.object-meta.xml
<CustomObject>
    <label>Fund Investment</label>
    <nameField>
        <displayFormat>FI-{0000}</displayFormat>
        <label>Fund Investment Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fund Investments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>