unpackaged/main/default/objects/Fund_Investment__c/fields/Portfolio_Company__c.field-meta.xml
<CustomField>
    <fullName>Portfolio_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Company, Property, Portfolio Company</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fund Investments</relationshipLabel>
    <relationshipName>Fund_Investments</relationshipName>
    <type>Lookup</type>
</CustomField>